--- a/index.html
+++ b/index.html
@@ -796,6 +796,76 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 	</section>
 
+<article class="catalogs-container">
+    <section class="catalog-accordion-container">
+        <h3 class="catalog-accordion-title">Негатив і здоровʼя (відливки/чистки/захист)</h3>
+        <div class="catalog-content">
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Захист</h4>
+                <p><em>Краще робити після чистки</em></p>
+                <p class="price">600 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Чистка стандарт</h4>
+                <p>Глобальна була пів року тому, або менше</p>
+                <p class="price">1400 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Повна чистка</h4>
+                <p>Глобальна не робилась ніколи, або дуже давно</p>
+                <p class="price">3500 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Чистка фінансового каналу</h4>
+                <p class="price">1200 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Діагностика негативу таро</h4>
+                <ul>
+                    <li>Який вид негативу є?</li>
+                    <li>Звідки?</li>
+                    <li>Як боротися з цим?</li>
+                </ul>
+                <p class="price">450 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Діагностика негативу таро + відливка</h4>
+                <p>(Діагностика по чакрам)</p>
+                <p class="price">800 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Чистка любовного каналу</h4>
+                <p class="price">1200 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Відливка від конфліктів та сор в парі</h4>
+                <p class="price">800 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Відливка від самонегативу, комплексів та страхів</h4>
+                <p class="price">700 грн</p>
+            </div>
+
+            <div class="service-item" style="margin-bottom: 20px;">
+                <h4>Розклад на здоровʼя</h4>
+                <ul>
+                    <li>Які є проблеми?</li>
+                    <li>Як з ними боротися?</li>
+                </ul>
+                <p class="price">350 грн</p>
+            </div>
+        </div>
+    </section>
+</article>
+
 	<section class='reviews-container'>
 		<h4 class='reviews-title'>Відгуки</h4>
 
