--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 		<article class="introduction-price-list-container">
 			<p>Якщо готові розклади не підходять:</>
 			</p>
-			<p><strong>1 обширне питання – 90 грн</strong></p>
-			<p>(3 питання – 215 грн + далі кожне додаткове питання рахується
-				по 80 грн)</p>
+			<p><strong>1 обширне питання – 100 грн</strong></p>
+			<p>(3 питання – 250 грн + далі кожне додаткове питання рахується
+				по 90 грн)</p>
 			<p><strong>Порада та застереження</strong></p>
 			<p><strong>на місяць – 100 грн</strong></p>
 		</article>
@@ -77,7 +77,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>490 грн</span>
+							<span class='accordion-price accordion-price-one'>500 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -97,7 +97,26 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>380 грн</span>
+							<span class='accordion-price accordion-price-one'>400 грн</span>
+						</footer>
+					</main>
+				</div>
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Як покращити наші відносини?</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Яка енергія панує в наших відносинах?</li>
+							<li class='accordion-item'>Які слабкі сторони?</li>
+							<li class='accordion-item'>Які сильні сторони?</li>
+							<li class='accordion-item'>Як покращити відносини?</li>
+							<li class='accordion-item'>Що придає нам обом енергію?</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>300 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -124,6 +143,25 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 				</div>
 				<div class='accordion'>
 					<header class='accordion-header'>
+						<h4 class='accordion-title'>Чи повернеться він/вона до тебе?</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Його/ її думка про розставання?</li>
+							<li class='accordion-item'>Яка причина розриву на думку партнера?</li>
+							<li class='accordion-item'>Почуття до вас</li>
+							<li class='accordion-item'>Які дії робити, аби повернути людину? або які дії робити, аби забути людину?</li>
+							<li class='accordion-item'>Пауза чи кінець?</li>
+						</ol>
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-one'>280 грн</span>
+						</footer>
+					</main>
+				</div>
+				<div class='accordion'>
+					<header class='accordion-header'>
 						<h4 class='accordion-title'>Статус відносин</h4>
 						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
 					</header>
@@ -135,7 +173,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>100 грн</span>
+							<span class='accordion-price accordion-price-one'>200 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -156,7 +194,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>280 грн</span>
+							<span class='accordion-price accordion-price-one'>300 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -177,7 +215,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>299 грн</span>
+							<span class='accordion-price accordion-price-one'>333 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -280,7 +318,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>100 грн</span>
+							<span class='accordion-price accordion-price-two'>150 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -299,7 +337,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>170 грн</span>
+							<span class='accordion-price accordion-price-two'>200 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -328,14 +366,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 					</header>
 					<main class='accordion-container'>
 						<ol class='accordion-list'>
-							<li class='accordion-item'>В цьому розкладі розбираємо такі аспекти, як: здоровʼя, емоційний
-								стан, робота/навчання, сімʼя/стосунки, фінанси та порада на рік. По кожному аспекту
-								розглядаємо 5 питань: 1. Ситуація зараз; 2. Чого можна досягти за рік в цій сфері; 3. Що
-								робити протягом року; 4. Застереження; 5. Порада</li>
+							<p>На кожен місяць викладується по 2 карти  - обширний розклад </>
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>999 грн</span>
+							<span class='accordion-price accordion-price-two'>555 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -353,7 +388,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>100 грн</span>
+							<span class='accordion-price accordion-price-two'>150 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -371,13 +406,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 							</li>
 							<li class="accordion-item">Що чекає в особистому житті?</li>
 							<li class="accordion-item">Що чекає в роботі/навчанні?</li>
-							<li class="accordion-item"> Яке фінансове становище буде протягом місяця?</li>
+							<li class="accordion-item"> Яке фінансове становище буде протягом сезону?</li>
 							<li class="accordion-item">Порада + застереження</li>
 							<li class="accordion-item">+ ваше питання повʼязане з сезоном</li>
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>380 грн</span>
+							<span class='accordion-price accordion-price-two'>400 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -494,7 +529,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-one'>333 грн</span>
+							<span class='accordion-price accordion-price-one'>420 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -559,7 +594,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>225 грн</span>
+							<span class='accordion-price accordion-price-two'>300 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -580,7 +615,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 						</ol>
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>237 грн</span>
+							<span class='accordion-price accordion-price-two'>330 грн</span>
 						</footer>
 					</main>
 				</div>
@@ -601,7 +636,27 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
 
 
 						<footer class='accordion-footer'>
-							<span class='accordion-price accordion-price-two'>222 грн</span>
+							<span class='accordion-price accordion-price-two'>333 грн</span>
+						</footer>
+					</main>
+				</div>
+
+				<div class='accordion'>
+					<header class='accordion-header'>
+						<h4 class='accordion-title'>Розклад 7 чакр</h4>
+						<img src="./assets/icons/IconPlus.svg" alt="accrodion-icon" class="accordion-icon">
+					</header>
+					<main class='accordion-container'>
+						<ol class='accordion-list'>
+							<li class='accordion-item'>Дізнайтеся про кожну з 7 чакр, як енергія циркулює у вас і на які сфери життя впливає.</li>
+							<li class='accordion-item'>Розклад покаже, чому у вас можуть виникати труднощі з грошима, роботою, стосунками, здоров’ям чи стабільністю.</li>
+							<li class='accordion-item'>Дізнайтеся, які чакри потребують уваги та балансування саме зараз.</li>
+							<li class='accordion-item'>Я підберу для вас індивідуальні рекомендації для відновлення гармонії.</li>
+						</ol>
+
+
+						<footer class='accordion-footer'>
+							<span class='accordion-price accordion-price-two'>555 грн</span>
 						</footer>
 					</main>
 				</div>
